--- a/restaurant_booking/templates/home.html
+++ b/restaurant_booking/templates/home.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant Booking System</title>
+    <title>Home</title>
 </head>
 
 <body>
     <h1>Welcome to the Restaurant Booking System</h1>
+    <a href="/tables/">View Tables</a>
+    <a href="/reservations/">View Reservations</a>
 </body>
 
 </html>
