--- a/restaurant_booking/templates/tables.html
+++ b/restaurant_booking/templates/tables.html
@@ -25,8 +25,14 @@
         <h2>Available Tables</h2>
         <ul>
             {% for table in tables %}
-            <li>Table {{ table.number }} (Capacity: {{ table.capacity }}) -
-                {% if table.is_available %}Available{% else %}Booked{% endif %}
+            <li>
+                Table {{ table.number }} (Capacity: {{ table.capacity }}) -
+                {% if table.is_available %}
+                Available
+                <a href="{% url 'book_table' %}?table={{ table.id }}" class="btn">Book This Table</a>
+                {% else %}
+                Booked
+                {% endif %}
             </li>
             {% endfor %}
         </ul>
